2007-11-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab):
	
	Previous bug fixed? Why? :D
	Some checks on the GAP seems to fix the problem.
	
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_arrow):
	
	An intend

2007-11-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab):
	Changed the tab design, so jimmac will not stress me anymore :)
	The horizontal instead check should be backported to 2.20.x
	
	I have an issue with epiphany, gedit etc etc: 
	when the notebook label has some icons (or buttons not sure)
	then the stripe *lost* one pixel, it seems like the "height" parameter
	sent to clearlooks_draw_tab is exactly 2.0 px smaller.
	why?
	we must add an hack here.

2007-11-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/gtkrcs/clearlooks:
	Added some options that increases test coverage in the parsing code.

2007-10-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torture:
	Change message a bit.

2007-10-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	* test/runinx:
	* test/torture:
	Added a script "runinx" that dynamically starts an Xvfb server if
	needed. It seems to work ...

2007-10-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.12.2 release.

2007-10-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	Unset the GTK_MODULES enviroment variable during tests.

2007-10-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_list_view_header):
	Forgot to update a draw_separator call.

2007-10-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c: