@@ -2,13 +2,17 @@
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
 	(clearlooks_gummy_draw_tab):
-	
+	A new variable for the size, with some added thickness mods
+
+2007-11-05  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_tab):
 	Previous bug fixed? Why? :D
 	Some checks on the GAP seems to fix the problem.
 	
 	* engines/clearlooks/src/clearlooks_style.c:
 	(clearlooks_style_draw_arrow):
-	
 	An intend
 
 2007-11-05  Andrea Cimitan  <andrea.cimitan@gmail.com>
